--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> FOODY.COM </title>
+    <title> CHEAPVPS.COM </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -48,7 +48,7 @@
         <div class="menu-wrap">
             <a href="#home">
                 <div class="logo">
-                    FoodyCom
+                    CheapVPS
                 </div>
             </a>
             <div class="menu h-xs">
@@ -89,12 +89,10 @@
                 <div class="col-6 col-xs-12">
                     <div class="slogan">
                         <h1 class="left-to-right play-on-scroll">
-                            FoodyCom
+                            CheapVPS
                         </h1>
                         <p class="left-to-right play-on-scroll delay-2">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae eveniet ullam perferendis
-                            eos, nobis corrupti similique fuga ipsa minus at eius ipsam expedita quam aliquam
-                            perspiciatis voluptate qui dolore soluta.
+                            Buy Cheap VPS Hosting Plan with 24/7 Support - Get Cheapest Server From Market by CheapVPS.org. Max. 24hours Setup, Reliable, fast, safe, cheap and secure VPS Hosting Services [Not Carded].
                         </p>
                         <div class="left-to-right play-on-scroll delay-4">
                             <button>
@@ -122,9 +120,7 @@
                             memories for <span class="primary-color">you</span>
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus placeat et eos,
-                            dignissimos voluptatem tempora necessitatibus doloribus! Eum qui doloribus odio dolor
-                            tenetur nihil impedit vero magni, distinctio soluta!
+                            Buy Cheap VPS Hosting Plan with 24/7 Support - Get Cheapest Server From Market by CheapVPS.org. Max. 24hours Setup, Reliable, fast, safe, cheap and secure VPS Hosting Services [Not Carded].
                         </p>
                     </div>
                 </div>
@@ -141,34 +137,32 @@
                     What will <span class="primary-color">you</span> eat today?
                 </h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque alias aliquam eveniet, iure
-                    praesentium dicta ex dolorum inventore itaque minus repudiandae, odio provident? Velit architecto
-                    natus expedita non? Odio, dolorum.
+                    Buy Cheap VPS Hosting Plan with 24/7 Support - Get Cheapest Server From Market by CheapVPS.org. Max. 24hours Setup, Reliable, fast, safe, cheap and secure VPS Hosting Services [Not Carded].
                 </p>
                 <div class="food-category">
                     <div class="zoom play-on-scroll">
                         <button class="active" data-food-type="all">
-                            All food
+                            All Plans
                         </button>
                     </div>
                     <div class="zoom play-on-scroll delay-2">
                         <button data-food-type="salad">
-                            Salad
+                            Monthly
                         </button>
                     </div>
                     <div class="zoom play-on-scroll delay-4">
                         <button data-food-type="lorem">
-                            Lorem
+                            Quarterly
                         </button>
                     </div>
                     <div class="zoom play-on-scroll delay-6">
                         <button data-food-type="ipsum">
-                            Ipsum
+                            Semi Annual
                         </button>
                     </div>
                     <div class="zoom play-on-scroll delay-8">
                         <button data-food-type="dolor">
-                            Dolor
+                            Annually
                         </button>
                     </div>
                 </div>
