--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 <div class="col-5 col-xs-12 align-items-center">
                     <div class="about-slogan right-to-left play-on-scroll">
                         <h3>
-                            <span class="primary-color">We</span> create <span class="primary-color">delicious</span>
-                            memories for <span class="primary-color">you</span>
+                            <span class="primary-color">We</span> create <span class="primary-color">Stable</span>
+                            Servers for <span class="primary-color">you</span>
                         </h3>
                         <p>
                             Buy Cheap VPS Hosting Plan with 24/7 Support - Get Cheapest Server From Market by CheapVPS.org. Max. 24hours Setup, Reliable, fast, safe, cheap and secure VPS Hosting Services [Not Carded].
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="food-menu">
                 <h1>
-                    What will <span class="primary-color">you</span> eat today?
+                    What's <span class="primary-color">your</span> Plan today?
                 </h1>
                 <p>
                     Buy Cheap VPS Hosting Plan with 24/7 Support - Get Cheapest Server From Market by CheapVPS.org. Max. 24hours Setup, Reliable, fast, safe, cheap and secure VPS Hosting Services [Not Carded].
