--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> CHEAPVPS.COM </title>
+    <title> VPSDUKAAN </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -92,7 +92,7 @@
                             CheapVPS
                         </h1>
                         <p class="left-to-right play-on-scroll delay-2">
-                            Buy Cheap VPS Hosting Plan with 24/7 Support - Get Cheapest Server From Market by CheapVPS.org. Max. 24hours Setup, Reliable, fast, safe, cheap and secure VPS Hosting Services [Not Carded].
+                            Buy Cheap VPS Hosting Plan with 24/7 Support - Get Cheapest Server From Market by VPSDUKAAN. Max. 24hours Setup, Reliable, fast, safe, cheap and secure VPS Hosting Services [Not Carded].
                         </p>
                         <div class="left-to-right play-on-scroll delay-4">
                             <button>
