--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <div class="item-wrap bottom-up play-on-scroll">
                             <div class="item-img">
                                 <div class="img-holder bg-img"
-                                    style="background-image: url("https://justpaste.it/img/3abbf184292ebcddbcd62bc75d81ded7.jpg");"></div>
+                                    style="background-image: url("assets/Logo_Ubuntu.png");"></div>
                             </div>
                             <div class="item-info">
                                 <div>
